--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.15.2",
+    "@mui/material": "^5.15.2",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "styled-components": "^6.1.5"
+    "styled-components": "^6.1.6",
+    "styled-normalize": "^8.1.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.6",
